--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -36,7 +36,11 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-  
+
+    - name: 'Report Coverage'
+      if: always()
+      uses:  davelosert/vitest-coverage-report-action@v2
+
   sonarcloud:
     name: SonarCloud
     runs-on: ubuntu-latest
