--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,10 +33,12 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm run test:unit
-
+    - name: 'Install Dependencies'
+      run: npm ci
+    - name: 'Build'
+      run: npm run build --if-present
+    - name: 'Test'
+      run: npx vitest --coverage
     - name: 'Report Coverage'
       if: always()
       uses:  davelosert/vitest-coverage-report-action@v2
