--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,13 @@ on:
       - '**.json'
 
 jobs:
-  build:
+  test:
+    
+    permissions:
+      # Required to checkout the code
+      contents: read
+      # Required to put a comment into the pull-request
+      pull-requests: write
 
     runs-on: ubuntu-latest
 
