--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=P3-Hype_SRAMS-frontend
 sonar.organization=p3-hype
+sonar.javascript.lcov.reportPaths=./coverage/coverage-summary.json
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=SRAMS-frontend
