--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,6 @@
     "types": ["vitest/globals"]
   },
   "include": ["vite.config.ts", "src"],
+  "exclude": ["src/test"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
