--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=P3-Hype_SRAMS-frontend
 sonar.organization=p3-hype
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.sources = src/
-sonar.tests = src/test/
+sonar.tests = test/
 
 
 # This is the name and version displayed in the SonarCloud UI.
