--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "noFallthroughCasesInSwitch": true,
     "types": ["vitest/globals"]
   },
-  "include": ["vite.config.ts", "src"],
-  "exclude": ["src/test"],
+  "include": ["vite.config.ts", "src", "test"],
+  "exclude": ["test"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
