--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
