--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jsdom": "^22.1.0",
+    "react-router-dom": "^6.16.0",
     "react-test-renderer": "^18.2.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
