Changed branch to main

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: Create and publish container for provisioning
 on:
   push:
     branches:
-      - feature/58-github-actions
+      - main
     tags:
       - "v*.*.*"
     paths-ignore:
