--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"format": "npx prettier --write .",
 		"preview": "vite preview",
 		"test": "vitest",
 		"test:ui": "vitest --ui --coverage.enabled=true",
