--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
 		"test": "vitest",
 		"test:ui": "vitest --ui --coverage.enabled=true",
 		"test:unit": "vitest",
-		"coverage": "vitest run --coverage",
-		"prepare": "husky install"
+		"coverage": "vitest run --coverage"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
