--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@vitest/coverage-v8": "^0.34.6",
 		"@vitest/ui": "^0.34.6",
 		"eslint": "^8.52.0",
+		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"eslint-plugin-react-refresh": "^0.4.3",
 		"jsdom": "^22.1.0",
