--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
 		"@mui/icons-material": "^5.14.13",
+		"@mui/lab": "^5.0.0-alpha.150",
 		"@mui/material": "^5.14.12",
 		"@mui/x-charts": "^6.0.0-alpha.15",
 		"axios": "^1.5.1",
 		"react": "^18.2.0",
+		"react-chrono": "^2.3.1",
 		"react-dom": "^18.2.0",
 		"react-error-boundary": "^4.0.11",
 		"react-query": "^3.39.3"
