fix nginx config

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,10 +3,10 @@ server {
     listen [::]:80 ;
 
     # In my case my website files directory is /var/www/html.
-    root /var/www/html;    
+    root /usr/share/nginx/html;    
     
     # Write your domain name instead of example.com.
-    server_name example.com; 
+    server_name 130.225.39.44; 
     
     index index.html index.htm index.nginx-debian.html;
 
