--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
+		"@fullcalendar/react": "^6.1.9",
+		"@fullcalendar/resource-timeline": "^6.1.9",
 		"@mui/icons-material": "^5.14.13",
 		"@mui/lab": "^5.0.0-alpha.150",
 		"@mui/material": "^5.14.12",
