--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"axios": "^1.5.1",
 		"echarts": "^5.4.3",
 		"echarts-for-react": "^3.0.2",
+		"fullcalendar": "^6.1.9",
 		"react": "^18.2.0",
 		"react-chrono": "^2.3.1",
 		"react-dom": "^18.2.0",
