--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
 		"@mui/lab": "^5.0.0-alpha.150",
 		"@mui/material": "^5.14.12",
 		"@mui/x-charts": "^6.0.0-alpha.15",
+		"@mui/x-date-pickers": "^6.18.0",
 		"axios": "^1.5.1",
+		"dayjs": "^1.11.10",
 		"echarts": "^5.4.3",
 		"echarts-for-react": "^3.0.2",
 		"fullcalendar": "^6.1.9",
