--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ server {
     location / {
         try_files $uri /index.html;
 
-        basic_auth "Restricted Content";
-        basic_auth_user_file /etc/nginx/.htpasswd;
+        auth_basic "Restricted Content";
+        auth_basic_user_file /etc/nginx/.htpasswd;
     }
 }
