--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
+		"@esbuild/win32-x64": "^0.19.5",
 		"@fullcalendar/react": "^6.1.9",
 		"@fullcalendar/resource-timeline": "^6.1.9",
 		"@mui/icons-material": "^5.14.13",
