--- a/.github/workflows/test-scripts.yml
+++ b/.github/workflows/test-scripts.yml
@@ -3,13 +3,13 @@ name: Test Scripts on Bertha
 on:
   workflow_dispatch:
     inputs:
-      var1:
+      container_name:
         description: 'Container Name'
         required: true
-      var2:
+      id_name:
         description: 'ID Name'
         required: true
-      var3:
+      data:
         description: 'Data'
         required: true
 
@@ -29,4 +29,4 @@ jobs:
           username: ${{ secrets.BERTHA_USER }}
           key: ${{ secrets.SSH_KEY }}
           port: ${{ secrets.BERTHA_SSH_PORT }}
-          script: bash ${HOME}/hype-scripts/sensor/add-datamock.sh  ${{ github.event.inputs.var1 }} ${{ github.event.inputs.var2 }} ${{ github.event.inputs.var3 }}
+          script: bash ${HOME}/hype-scripts/sensor/add-datamock.sh  ${{ github.event.inputs.container_name }} ${{ github.event.inputs.id_name }} ${{ github.event.inputs.data }}
