--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
               with:
                   fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
             - name: Install dependencies
-              run: npm ci
+              run: npm -f i
             - name: Test and coverage
               run: npx vitest --coverage
             - name: SonarCloud Scan
