set to localhost for dev

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-VITE_SRAMS_API_ADDRESS=http://130.225.39.44:8081/ #http://localhost:8081/
+VITE_SRAMS_API_ADDRESS=http://localhost:8081/
 VITE_PROMETHEUS_API_ADDRESS=http://130.225.39.44:9090/api/v1/
