--- a/.github/workflows/modify-datamock.yml
+++ b/.github/workflows/modify-datamock.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-      - name: Run script to modify datamock
+      - name: Run script to modify datamocks
         uses: appleboy/ssh-action@v1.0.0
         with:
           host: ${{ secrets.BERTHA_HOST }}
